# Pebbles-game

./: .gitignore  Cargo.toml  Template.txt  build.rs  work.md
io/: Cargo.toml
io/src/: lib.rs
src/: lib.rs
state/: Cargo.toml
state/src/: lib.rs
tests/: tests.rs
